--- a/src/styles/components/header-navigation/menu.scss
+++ b/src/styles/components/header-navigation/menu.scss
@@ -26,7 +26,7 @@
         padding-top: 0.7em;
         display: block;
         border-bottom: 1px solid rgba(0, 0, 0, 0.2);
-        &:last-child {
+        &:nth-last-child(1 of :not(.button-link)) {
           border-bottom: none;
         }
         &.active {
