--- a/src/styles/layouts/header.scss
+++ b/src/styles/layouts/header.scss
@@ -86,6 +86,18 @@ header {
       }
     }
   }
+
+  .category-checkout & {
+    @media (max-width: 1200px) {
+      height: 64px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      background-color: #f7f6f5;
+      border-bottom: 3px solid #000000;
+    }
+  }
 }
 .icon-links {
   position: fixed;
